--- a/.github/workflows/docker-workflow.yaml
+++ b/.github/workflows/docker-workflow.yaml
@@ -62,6 +62,10 @@ jobs:
       - name: Exécution des tests pytest
         run: |
           echo "Exécution des tests pytest sans conteneurs..."
+          echo "Contenu du répertoire racine:"
+          ls -la
+          echo "Contenu du répertoire app:"
+          ls -la app/
           cd test
           python -m pytest -v --tb=short --cov=../app --cov-report=xml --cov-report=term
       - name: Upload des résultats de couverture
