feat: Fonctionnalité de signature électronique : - Intégration dans l'espace administratif - ajout de modules pour déposer un document, accéder à la liste des signatures en attente, créer un document à signer à partir d'un framework - L'accès à la signature se fera par un lien envoyé par email

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ FILES_LOCAL_PATH=/var/www/intranet/documents
 FILES_DOCKER_PATH=/app/documents
 PRINT_LOCAL_PATH=/var/www/intranet/print
 PRINT_DOCKER_PATH=/app/print
+SIGNATURE_LOCAL_PATH=/var/www/intranet/documents/signatures
+SIGNATURE_DOCKER_PATH=/app/documents/signatures
 
 #  Configuration SSH pour transferts de fichiers
 SSH_PORT=22
