--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,9 @@ services:
     depends_on:
       - db
     volumes:
-      - ${FILES_LOCAL_PATH}:${FILES_DOCKER_PATH}  #  Persistance des fichiers de contrats
-      - ${PRINT_LOCAL_PATH}:${PRINT_DOCKER_PATH}
+      - documents_data:${FILES_DOCKER_PATH}  #  Persistance des fichiers de contrats
+      - print_data:${PRINT_DOCKER_PATH} #  Persistance des fichiers de documents envoyés à l'impression
+      - signature_data:${SIGNATURE_DOCKER_PATH} # Persistance des fichiers de signatures
       - ./alembic:/app/alembic
       - ./alembic.ini:/app/alembic.ini
     environment:
@@ -16,6 +17,8 @@ services:
     env_file:
       - .env
     restart: always
+    ports:
+      - "5000:5000"  #  Port de l'application Flask
     entrypoint: ["sh", "app/entrypoint.sh"]
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -37,6 +40,7 @@ services:
       - "80:80"
     networks:
       - intranet_net
+    #restart: always
 
   db:
     build:
@@ -63,6 +67,24 @@ volumes:
     driver_opts:
       type: none
       device: ${DB_LOCAL_PATH}
+      o: bind
+  signature_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: ${SIGNATURE_LOCAL_PATH}
+      o: bind
+  documents_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: ${FILES_LOCAL_PATH}
+      o: bind
+  print_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: ${PRINT_LOCAL_PATH}
       o: bind
 
 networks:
