--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,12 +11,14 @@ services:
       - ${PRINT_LOCAL_PATH}:${PRINT_DOCKER_PATH}
       - ./alembic:/app/alembic
       - ./alembic.ini:/app/alembic.ini
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+#      - /etc/localtime:/etc/localtime:ro
+#      - /etc/timezone:/etc/timezone:ro
     environment:
       - DB_URL=${DB_URL}
     env_file:
       - .env
+    ports:
+      - 5000
     restart: always
     entrypoint: ["sh", "app/entrypoint.sh"]
     extra_hosts:
@@ -34,13 +36,14 @@ services:
     volumes:
       - ./app/nginx/nginx.conf:/etc/nginx/nginx.conf
       - /opt/certs:/etc/nginx/certs
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+#      - /etc/localtime:/etc/localtime:ro
+#      - /etc/timezone:/etc/timezone:ro
     ports:
       - "443:443"  #  Port HTTPS
       - "80:80"
     networks:
       - intranet_net
+#    restart: always
 
   db:
     build:
@@ -58,8 +61,8 @@ services:
       - .env
     volumes:
       - dbdata:${DB_DOCKER_PATH}
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+#      - /etc/localtime:/etc/localtime:ro
+#      - /etc/timezone:/etc/timezone:ro
     networks:
       - intranet_net
 
