--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,14 +12,12 @@ services:
       - signature_data:${SIGNATURE_DOCKER_PATH} # Persistance des fichiers de signatures
       - ./alembic:/app/alembic
       - ./alembic.ini:/app/alembic.ini
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+      #- /etc/localtime:/etc/localtime:ro
+      #- /etc/timezone:/etc/timezone:ro
     environment:
       - DB_URL=${DB_URL}
     env_file:
       - .env
-    ports:
-      - 5000
     restart: always
     ports:
       - "5000:5000"  #  Port de l'application Flask
@@ -39,8 +37,8 @@ services:
     volumes:
       - ./app/nginx/nginx.conf:/etc/nginx/nginx.conf
       - /opt/certs:/etc/nginx/certs
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+      #- /etc/localtime:/etc/localtime:ro
+      #- /etc/timezone:/etc/timezone:ro
     ports:
       - "443:443"  #  Port HTTPS
       - "80:80"
@@ -64,8 +62,8 @@ services:
       - .env
     volumes:
       - dbdata:${DB_DOCKER_PATH}
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+      #- /etc/localtime:/etc/localtime:ro
+      #- /etc/timezone:/etc/timezone:ro
     networks:
       - intranet_net
 
