--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,15 +12,13 @@ services:
       - signature_data:${SIGNATURE_DOCKER_PATH} # Persistance des fichiers de signatures
       - ./alembic:/app/alembic
       - ./alembic.ini:/app/alembic.ini
-      #- /etc/localtime:/etc/localtime:ro
-      #- /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro  #  Synchronisation de l'heure avec l'hôte
+      - /etc/timezone:/etc/timezone:ro  #  Synchronisation du fuseau horaire avec l'hôte
     environment:
       - DB_URL=${DB_URL}
     env_file:
       - .env
     restart: always
-    ports:
-      - "5000:5000"  #  Port de l'application Flask
     entrypoint: ["sh", "app/entrypoint.sh"]
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -37,8 +35,8 @@ services:
     volumes:
       - ./app/nginx/nginx.conf:/etc/nginx/nginx.conf
       - /opt/certs:/etc/nginx/certs
-      #- /etc/localtime:/etc/localtime:ro
-      #- /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro  #  Synchronisation de l'heure avec l'hôte
+      - /etc/timezone:/etc/timezone:ro  #  Synchronisation du fuseau horaire avec l'hôte
     ports:
       - "443:443"  #  Port HTTPS
       - "80:80"
@@ -62,8 +60,8 @@ services:
       - .env
     volumes:
       - dbdata:${DB_DOCKER_PATH}
-      #- /etc/localtime:/etc/localtime:ro
-      #- /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro  #  Synchronisation de l'heure avec l'hôte
+      - /etc/timezone:/etc/timezone:ro  #  Synchronisation du fuseau horaire avec l'hôte
     networks:
       - intranet_net
 
